--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -66,3 +66,28 @@
   min-width: 100%; 
   min-height: 100%;
 }
+
+@media screen and (orientation:portrait) {
+  .btnWrapper{
+    width: 100%;
+  }
+}
+
+@media screen and (max-width:700px) {
+  .btnWrapper{
+    width: 100%;
+  }
+}
+
+@media screen and (max-height:660px) {
+.heading{
+  margin-top: 42px;
+}
+}
+
+@media screen and (max-width:360px) {
+.wrapper{
+  padding: 20px 0px;
+}
+}
+
