--- a/styles/quiz.module.css
+++ b/styles/quiz.module.css
@@ -205,6 +205,9 @@ color: white;
     .scoreBox{
         height: 50vh;
     }
+    .nextBtn{
+        margin-bottom: 20px;
+    }
 }
 
 @media screen and (max-width:700px) {
