--- a/styles/quiz_setting.module.css
+++ b/styles/quiz_setting.module.css
@@ -1,6 +1,6 @@
 .settings_wrapper{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     height: 100vh;
     flex-direction: column;
